# discount_calculator

./: .gitignore  Makefile  README.md  pyproject.toml
src/discount_calculator/: __init__.py  calculator.py  discounts.py  models.py
tests/: conftest.py  test_calculator.py  test_discounts.py  test_models.py
